deployments/sfu.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sfu
spec:
  type: ClusterIP
  ports:
  - name: jsonrpc
    port: 7000
    targetPort: 7000
    protocol: TCP
  - name: grpc
    port: 50051
    targetPort: 50051
  selector:
    app: sfu
---
apiVersion: apps/v1

kind: Deployment
metadata:
  name: sfu
spec:
  replicas: 1
  selector:
    matchLabels:
      name: sfu
  template:
    metadata:
      labels:
        name: sfu
    spec:
      containers:
        - name: sfu
          image: pionwebrtc/ion-sfu:latest-allrpc
          command: ["/usr/local/bin/sfu", "-c", "/configs/sfu.toml", "-jaddr", "127.0.0.1:7000", "-gaddr", "127.0.0.1:50051" ]
          ports:
          - containerPort: 50051
            name: grpc
          - containerPort: 7000
            name: jsonrpc
          # resources:
          #   limits:
          #     cpu: 500m
          #     memory: 500Mi
          #   requests:
          #     cpu: 500m
          #     memory: 500Mi

      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      terminationGracePeriodSeconds: 30
